--- a/baidu_ife/1-06/css/main.css
+++ b/baidu_ife/1-06/css/main.css
@@ -10,7 +10,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: #fff;
-    font-family: yaHei;
+    font-family: "Microsoft Yahei", yaHei;
 }
 .content-wrapper {
     position: relative;
@@ -88,7 +88,6 @@ div.content {
 .big-number {
     font-size: 116px;
     font-weight: bolder;
-    font-style: italic;
     color: #75b86c;
 }
 .small-number {
@@ -98,12 +97,12 @@ div.content {
 }
 .smaller-number {
     display: inline-block;
-    font-size: 21px;
+    font-size: 16px;
     color: rgba(204, 118, 128, 1);
 }
 .smaller-number span {
     display: block;
-    font-size: 12px;
+    font-size: 10px;
     color: #938e8c;
 }
 .second {
