--- a/baidu_ife/1-06/css/main.css
+++ b/baidu_ife/1-06/css/main.css
@@ -10,7 +10,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: #fff;
-    font-family: "Microsoft Yahei", yaHei;
+    font-family: "Microsoft YaHei", yaHei;
 }
 .content-wrapper {
     position: relative;
@@ -80,7 +80,7 @@ div.content {
     font-size: 24px;
 }
 .banner-desp {
-    font-family: "Kaiti SC";
+    font-family: "Kaiti SC", "楷体";
     font-size: 12px;
     line-height: 10px;
     color: #938e8c;
@@ -134,7 +134,7 @@ div.content {
     color: #75b86c;
 }
 .second .content {
-    font-family: "Songti SC";
+    font-family: "Songti SC", "宋体";
     font-size: 12px;
     line-height: 16px;
     color: #938e8c;
@@ -185,7 +185,7 @@ div.content {
 .third .news-content {
     margin-top: 1rem;
     font-size: .7rem;
-    font-family: 'Songti SC';
+    font-family: 'Songti SC', '宋体';
     color: #938e8c;
     text-align: justify;
     letter-spacing: 2px;
@@ -260,7 +260,7 @@ div.content {
     width: 60%;
     float: left;
     margin: 2rem 0;
-    font-family: "Heiti SC";
+    font-family: "Heiti SC", "宋体";
     font-size: 12px;
     color: #ffffff;
 }
@@ -272,7 +272,7 @@ div.content {
 }
 .third .index li{
     margin: 1rem 3rem;
-    font-family: "Songti SC";
+    font-family: "Songti SC", "宋体";
     list-style: inside url('../img/triangle.png');
 }
 .third .index li span {
@@ -287,7 +287,7 @@ div.content {
     left: 60%;
     line-height: 100%;
     font-size: 14px;
-    font-family: "Heiti TC";
+    font-family: "Heiti TC", "黑体";
     text-align: justify;
 }
 .third .quote span{
