--- a/baidu_ife/1-06/css/main.css
+++ b/baidu_ife/1-06/css/main.css
@@ -260,7 +260,7 @@ div.content {
     width: 60%;
     float: left;
     margin: 2rem 0;
-    font-family: "Heiti SC", "宋体";
+    font-family: "Heiti SC", "黑体";
     font-size: 12px;
     color: #ffffff;
 }
