--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -57,7 +57,9 @@ a {
   color: #fff;
   text-align: center;
   background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-image: linear-gradient(120deg, #155799, #4ed6d0);
+  box-shadow: 0px 5px 0px rgba(78, 214, 208, 1);
+}
 
 @media screen and (min-width: 64em) {
   .page-header {
@@ -245,7 +247,6 @@ a {
     font-size: 0.9rem; } }
 .title {
     text-align: center;
-    color: rgba(78, 214, 208, 1);
 }
 .baidu-item {
     display: inline-block;
@@ -256,13 +257,28 @@ a {
     border: .1rem solid rgba(78, 214, 208, 1);
     color: rgba(78, 214, 208, 1);
     border-radius: .5rem;
+    box-shadow: 0px 0px 15px rgba(129, 145, 152, .3);
     transition: all .5s ease-in-out;
 }
 
 .baidu-item:hover {
     text-decoration: none;
     background-color: rgba(78, 214, 208, 1);
+    box-shadow: 0px 0px 150px rgba(129, 145, 152, 0);
     color: white;
 }
-
+.title {
+    width: 20rem;
+    margin: 0 auto;
+    font-size: 3rem;
+    border-left: 3px solid rgba(78, 214, 208, 1);
+    border-right: 3px solid rgba(78, 214, 208, 1);
+    text-shadow: 2px 2px 0px rgba(78, 214, 208, 1);
+}
+.main-content {
+    text-align: center;
+}
+a.website {
+    color: white;
+}
 
