--- a/baidu_ife/1-07/css/style.css
+++ b/baidu_ife/1-07/css/style.css
@@ -657,7 +657,8 @@ header nav .selected, header nav a:hover {
 }
 /* line 529, ../sass/partitial/_layout.scss */
 .content .volunteer .join-us .join-table input {
-  width: 80%;
+  box-sizing: border-box;
+  width: 100%;
   height: 100%;
   padding: .8rem 1.5rem;
   margin-bottom: .5rem;
@@ -665,9 +666,10 @@ header nav .selected, header nav a:hover {
   border: none;
   outline: none;
 }
-/* line 538, ../sass/partitial/_layout.scss */
+/* line 539, ../sass/partitial/_layout.scss */
 .content .volunteer .join-us .join-table .one-item textarea {
-  width: 175%;
+  box-sizing: border-box;
+  width: 193%;
   padding: .8rem 1.5rem 5rem 1.5rem;
   margin-bottom: .5rem;
   background-color: #ededee;
@@ -675,21 +677,21 @@ header nav .selected, header nav a:hover {
   resize: none;
   outline: none;
 }
-/* line 547, ../sass/partitial/_layout.scss */
+/* line 549, ../sass/partitial/_layout.scss */
 .content .volunteer .join-us .join-table .submit {
-  width: 190%;
+  width: 193%;
   background-color: #ededee;
   text-align: center;
   padding: .8rem 0;
   font-size: 1rem;
 }
-/* line 553, ../sass/partitial/_layout.scss */
+/* line 555, ../sass/partitial/_layout.scss */
 .content .volunteer .join-us .join-table .submit:hover {
   cursor: pointer;
   background-color: #d6d6da;
 }
 
-/* line 563, ../sass/partitial/_layout.scss */
+/* line 565, ../sass/partitial/_layout.scss */
 footer {
   width: 100%;
   position: relative;
@@ -699,21 +701,21 @@ footer {
   padding: 5rem 0;
   color: #ffffff;
 }
-/* line 571, ../sass/partitial/_layout.scss */
+/* line 573, ../sass/partitial/_layout.scss */
 footer .contact {
   margin-bottom: 1rem;
 }
-/* line 574, ../sass/partitial/_layout.scss */
+/* line 576, ../sass/partitial/_layout.scss */
 footer .small {
   font-size: .6rem;
 }
-/* line 577, ../sass/partitial/_layout.scss */
+/* line 579, ../sass/partitial/_layout.scss */
 footer .email {
   display: inline-block;
   margin-top: 2rem;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
 }
-/* line 581, ../sass/partitial/_layout.scss */
+/* line 583, ../sass/partitial/_layout.scss */
 footer .email input {
   box-sizing: border-box;
   width: 350px;
@@ -723,25 +725,25 @@ footer .email input {
   font-size: 1rem;
   color: #787b83;
 }
-/* line 590, ../sass/partitial/_layout.scss */
+/* line 592, ../sass/partitial/_layout.scss */
 footer .email span {
   display: inline-block;
   width: 50px;
   text-align: center;
   background-color: #686166;
   font-size: .8rem;
-  padding: .8rem .5rem .65rem .5rem;
+  padding: 12px 8px 12px 8px;
 }
-/* line 597, ../sass/partitial/_layout.scss */
+/* line 599, ../sass/partitial/_layout.scss */
 footer .email span:hover {
   cursor: pointer;
 }
-/* line 602, ../sass/partitial/_layout.scss */
+/* line 604, ../sass/partitial/_layout.scss */
 footer ul {
   margin-top: 2rem;
   margin-bottom: 2rem;
 }
-/* line 605, ../sass/partitial/_layout.scss */
+/* line 607, ../sass/partitial/_layout.scss */
 footer ul li {
   display: inline-block;
   width: 30px;
@@ -749,27 +751,27 @@ footer ul li {
   margin: 0 .5rem;
   background: url("../img/contact_icon.png") no-repeat;
 }
-/* line 611, ../sass/partitial/_layout.scss */
+/* line 613, ../sass/partitial/_layout.scss */
 footer ul li.qq {
   background-position: 0px 0px;
 }
-/* line 614, ../sass/partitial/_layout.scss */
+/* line 616, ../sass/partitial/_layout.scss */
 footer ul li.weibo {
   background-position: -30px 0px;
 }
-/* line 617, ../sass/partitial/_layout.scss */
+/* line 619, ../sass/partitial/_layout.scss */
 footer ul li.skype {
   background-position: -60px 0px;
 }
-/* line 620, ../sass/partitial/_layout.scss */
+/* line 622, ../sass/partitial/_layout.scss */
 footer ul li.internet {
   background-position: -90px 0px;
 }
-/* line 623, ../sass/partitial/_layout.scss */
+/* line 625, ../sass/partitial/_layout.scss */
 footer ul li:hover {
   cursor: pointer;
 }
-/* line 628, ../sass/partitial/_layout.scss */
+/* line 630, ../sass/partitial/_layout.scss */
 footer .footer {
   position: absolute;
   bottom: 0;
@@ -779,11 +781,11 @@ footer .footer {
   font-size: .8rem;
   background-color: #2f3038;
 }
-/* line 636, ../sass/partitial/_layout.scss */
+/* line 638, ../sass/partitial/_layout.scss */
 footer .footer .left {
   float: left;
 }
-/* line 639, ../sass/partitial/_layout.scss */
+/* line 641, ../sass/partitial/_layout.scss */
 footer .footer .right {
   float: right;
   text-decoration: none;
