--- a/baidu_ife/1-07/sass/partitial/_layout.scss
+++ b/baidu_ife/1-07/sass/partitial/_layout.scss
@@ -527,7 +527,8 @@ header {
           width: 80%;
         }
         & input {
-          width: 80%;
+          box-sizing: border-box;
+          width: 100%;
           height: 100%;
           padding: .8rem 1.5rem;
           margin-bottom: .5rem;
@@ -536,7 +537,8 @@ header {
           outline: none;
         }
         & .one-item textarea {
-          width: 175%;
+          box-sizing: border-box;
+          width: 193%;
           padding: .8rem 1.5rem 5rem 1.5rem;
           margin-bottom: .5rem;
           background-color: $color14;
@@ -545,7 +547,7 @@ header {
           outline: none;
         }
         & .submit {
-          width: 190%;
+          width: 193%;
           background-color: $color14;
           text-align: center;
           padding: .8rem 0;
@@ -593,7 +595,7 @@ footer {
       text-align: center;
       background-color: $color16;
       font-size: .8rem;
-      padding: .8rem .5rem .65rem .5rem;
+      padding: 12px 8px 12px 8px;
       &:hover {
         cursor: pointer;
       }
