--- a/baidu_ife/1-07/sass/partitial/_layout.scss
+++ b/baidu_ife/1-07/sass/partitial/_layout.scss
@@ -525,11 +525,10 @@ header {
         color: $color11;
         & form {
           position: relative;
-          width: 80%;
         }
         & input {
-          width: 42.5%;
-          padding: .8rem 1.5rem;
+          width: 330px;
+          padding: 12px 24px;
           margin-bottom: .5rem;
           background-color: $color14;
           border: none;
@@ -537,7 +536,7 @@ header {
         }
         & textarea {
           box-sizing: border-box;
-          width: 100%;
+          width: 756px;
           padding: .8rem 1.5rem 5rem 1.5rem;
           margin-bottom: .5rem;
           background-color: $color14;
@@ -546,7 +545,7 @@ header {
           outline: none;
         }
         & .submit {
-          width: 100%;
+          width: 756px;
           background-color: $color14;
           text-align: center;
           padding: .8rem 0;
