--- a/baidu_ife/1-07/sass/partitial/_layout.scss
+++ b/baidu_ife/1-07/sass/partitial/_layout.scss
@@ -507,7 +507,7 @@ header {
           margin-top: .5rem;
           margin-bottom: .5rem;
         }
-        & .content {
+        & .a-content {
           width: 280px;
           line-height: 200%;
           margin-bottom: 2rem;
