--- a/baidu_ife/1-07/sass/partitial/_layout.scss
+++ b/baidu_ife/1-07/sass/partitial/_layout.scss
@@ -48,7 +48,7 @@ header {
     }
   }
 }
-.content {
+.main-content {
   width: 100%;
   height: 100%;
   & .section {
@@ -370,7 +370,7 @@ header {
     }
     & .activity-content {
       flex: 1 1 430px;
-      margin-top: 10%;
+      padding-top: 100px;
       text-align: center;
       & span {
         color: $color2;
@@ -440,7 +440,7 @@ header {
       flex: 1 1 425px;
       box-sizing: border-box;
       text-align: center;
-      padding: 10% 5%;
+      padding: 150px 50px;
       color: $color4;
       font-size: 1.5rem;
     }
