--- a/baidu_ife/1-07/sass/partitial/_layout.scss
+++ b/baidu_ife/1-07/sass/partitial/_layout.scss
@@ -114,21 +114,30 @@ header {
         width: 50px;
         height: 50px;
         margin: 3rem auto;
-        background: url("../img/ico_sprite.png") no-repeat;
-        &:hover {
-          background: url("../img/ico_sprite_hover.png") no-repeat;
-        }
+        background: url("../img/icon_sprite.png") no-repeat;
         &.round {
           background-position: 0 0;
+          &:hover {
+            background-position: 0 -50px;
+          }
         }
         &.flag {
           background-position: -50px 0;
+          &:hover {
+            background-position: -50px -50px;
+          }
         }
         &.flower {
           background-position: -100px 0;
+          &:hover {
+            background-position: -100px -50px;
+          }
         }
         &.rect {
           background-position: -150px 0;
+          &:hover {
+            background-position: -150px -50px;
+          }
         }
 
       }
