--- a/baidu_ife/1-07/sass/style.scss
+++ b/baidu_ife/1-07/sass/style.scss
@@ -15,6 +15,9 @@ body {
   font-family: "Microsoft YaHei", yaHei;
   min-width: 1280px;
 }
+* {
+  box-sizing: border-box;
+}
 @font-face {
   font-family: 'Glyphicons Halflings';
 
