--- a/baidu_ife/1-07/css/style.css
+++ b/baidu_ife/1-07/css/style.css
@@ -357,7 +357,7 @@ header nav .selected, header nav a:hover {
 /* line 290, ../sass/partitial/_layout.scss */
 .main-content .activity-place .place {
   margin-top: 8rem;
-  padding: 0 2rem;
+  padding: 0 32px;
   flex: 1;
   text-align: center;
 }
