--- a/baidu_ife/1-07/sass/partitial/_layout.scss
+++ b/baidu_ife/1-07/sass/partitial/_layout.scss
@@ -289,7 +289,7 @@ header {
     @include transition(all 0.2s ease);
     & .place {
       margin-top: 8rem;
-      padding: 0 2rem;
+      padding: 0 32px;
       flex: 1;
       text-align: center;
       & .big {
