--- a/baidu_ife/1-07/sass/partitial/_layout.scss
+++ b/baidu_ife/1-07/sass/partitial/_layout.scss
@@ -288,9 +288,9 @@ header {
     overflow: hidden;
     @include transition(all 0.2s ease);
     & .place {
-      margin-top: 8rem;
+      margin: 8rem auto;
       padding: 0 32px;
-      flex: 1;
+      flex: 0 0  267px;
       text-align: center;
       & .big {
         display: none;
@@ -302,7 +302,7 @@ header {
           margin: .2rem auto;
           font-size: 1.2rem;
           color: $color11;
-          word-spacing: 35px;
+          word-spacing: 30px;
           text-align: left;
         }
       }
