--- a/baidu_ife/1-07/sass/style.scss
+++ b/baidu_ife/1-07/sass/style.scss
@@ -2,7 +2,7 @@
 @import "./partitial/variables";
 @import "compass";
 @import "susyone";
-body, h1, h2, h3, header, div, p, ul, table {
+body, h1, h2, h3, header, div, p, ul, li, table {
   padding: 0;
   margin: 0;
 }
