--- a/baidu_ife/1-09/sass/partitial/_layout.scss
+++ b/baidu_ife/1-09/sass/partitial/_layout.scss
@@ -55,14 +55,10 @@ header {
   position: relative;
   display: flex;
   margin: 0 auto;
-  width: 1280px;
 }
 aside {
-  left: 0;
-  flex: 0 0 260px;
-  width: 260px;
+  flex: 1 0 260px;
   background-color: $color4;
-  z-index: 99;
   & section {
     width: 100%;
   }
@@ -147,8 +143,8 @@ aside {
   }
 }
 .content {
-  flex: 0 0 1020px;
-  width: 1020px;
+  flex: 4 0 1020px;
+  /*width: 1020px;*/
   background-color: $color9;
   & .content-top {
     padding: 0 20px;
@@ -457,21 +453,14 @@ aside {
             width: 70px;
             line-height: 30px;
             text-align: center;
-            z-index: 99;
             & span {
               display: block;
+              position: relative;
               width: 100%;
               height: 100%;
               background-color: $color16;
               border-radius: 5px;
-            }
-            & .shade {
-              display: none;
-              position: absolute;
-              width: 69px;
-              height: 1px;
-              background-color: $color2;
-              z-index: 99;
+              z-index: 1;
             }
             & .tab {
               display: none;
@@ -479,6 +468,7 @@ aside {
               width: 480px;
               height: 250px;
               padding: 20px;
+              top: 31px;
               border: 1px solid $color3;
               z-index: 0;
               padding: 40px 40px;
@@ -516,6 +506,7 @@ aside {
               height: 100%;
               left: 0;
               opacity: 0;
+              z-index: 99;
               &:hover {
                 cursor: pointer;
               }
