--- a/baidu_ife/1-09/sass/partitial/_layout.scss
+++ b/baidu_ife/1-09/sass/partitial/_layout.scss
@@ -143,7 +143,7 @@ aside {
   }
 }
 .content {
-  flex: 4 0 1020px;
+  flex: 1 0 1020px;
   /*width: 1020px;*/
   background-color: $color9;
   & .content-top {
@@ -234,6 +234,9 @@ aside {
       padding: 20px 20px;
       background-color: $color2;
       font-size: .75rem;
+      & form {
+        margin: 0 auto;
+      }
       & label {
         padding-right: 10px;
         padding-left: 20px;
@@ -616,7 +619,8 @@ aside {
         }
         & span {
           display: block;
-          width: 100%;
+          margin: 0 auto;
+          width: 38px;
           font-size: .75rem;
           padding-top: 5px;
           height: 38px;
