--- a/baidu_ife/1-09/sass/partitial/_layout.scss
+++ b/baidu_ife/1-09/sass/partitial/_layout.scss
@@ -209,6 +209,7 @@ aside {
         width: 100%;
         height: 100%;
         opacity: 0;
+        z-index: 99;
         &:hover {
           cursor: pointer;
         }
