--- a/baidu_ife/1-09/sass/partitial/_layout.scss
+++ b/baidu_ife/1-09/sass/partitial/_layout.scss
@@ -695,7 +695,7 @@ aside {
           border: 1px solid $color3;
           padding: 5px 0;
         }
-        & tr:hover  {
+        & tr:hover, & tr.selected  {
           & td {
             background-color: $color18;
           }
