--- a/baidu_ife/1-04/main.css
+++ b/baidu_ife/1-04/main.css
@@ -1,4 +1,3 @@
-/*
 .content {
     position: absolute;
     width: 400px;
@@ -28,7 +27,7 @@
     right: -50px;
     border-radius: 50%;
     background-color: #fc0;
-}*/
+}
 
 /**{
     margin: 0;
@@ -109,6 +108,7 @@ html,body{
     background-color: #fc0;
 }*/
 
+/*
 *{
     margin: 0;
     padding: 0;
@@ -124,10 +124,10 @@ html,body{
     position: relative;
     width: 400px;
     height: 200px;
-    /*left: 50%;
+    !*left: 50%;
     top: 50%;
     margin-left: -200px;
-    margin-top: -100px;*/
+    margin-top: -100px;*!
     overflow: hidden;
     background-color: #ccc;
     text-align: center;
@@ -151,3 +151,4 @@ html,body{
     border-radius: 50%;
     background-color: #fc0;
 }
+*/
