--- a/baidu_ife/1-08/main.css
+++ b/baidu_ife/1-08/main.css
@@ -6,25 +6,20 @@
 body {
     padding: 10px;
 }
+[class *= wrapper]:after {
+    content: '';
+    display: table;
+    clear: both;
+}
 .wrapper {
     display: block;
     padding: 0;
     margin: 0 -10px;
 }
-.wrapper:after {
-    content: '';
-    display: table;
-    clear: both;
-}
 .flow-wrapper {
     display: flex;
     flex-flow: row wrap;
     margin: 0 -10px;
-}
-.flow-wrapper:after {
-    content: '';
-    display: table;
-    clear: both;
 }
 [class ^= col-] {
     float: left;
@@ -34,18 +29,12 @@ body {
     padding: 10px;
 }
 .content {
-    line-height: 50px;
+    height: 50px;
     text-align: center;
     border: 1px solid black;
     background-color: #eee;
 }
 @media (max-width: 768px) {
-    [class ^= col] span:first-of-type {
-        display: none;
-    }
-    [class ^= col] span:last-of-type {
-        display: inline-block;
-    }
     .col-sm-2 {
         width: 16.667%;
     }
@@ -60,13 +49,6 @@ body {
     }
     .col-sm-12 {
         width: 100%
-    }
-
-    [class ^= flex] span:first-of-type {
-        display: none;
-    }
-    [class ^= flex] span:last-of-type {
-        display: inline-block;
     }
     .flex-sm-2 {
         flex: 0 0 16.667%;
@@ -85,12 +67,6 @@ body {
     }
 }
 @media (min-width: 767px) {
-    [class ^= col] span:first-of-type {
-        display: inline-block;
-    }
-    [class ^= col] span:last-of-type {
-        display: none;
-    }
     .col-md-1 {
         width: 8.333%;
     }
@@ -105,13 +81,6 @@ body {
     }
     .col-md-6 {
         width: 50%;
-    }
-
-    [class ^= flex] span:first-of-type {
-        display: inline-block;
-    }
-    [class ^= flex] span:last-of-type {
-        display: none;
     }
     .flex-md-1 {
         flex: 0 0 8.333%;
