--- a/baidu_ife/2-17/style.css
+++ b/baidu_ife/2-17/style.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: yaHei;
+    src: url('../1-06/css/font/msyh.ttf');
+}
+* {
+    font-family: "Microsoft YaHei", yaHei;
+}
 fieldset {
     width: 1200px;
     margin: 0 auto;
