--- a/baidu_ife/2-17/style.css
+++ b/baidu_ife/2-17/style.css
@@ -39,12 +39,22 @@ fieldset {
     margin: 50px auto;
     box-shadow: 0px 0px 5px #999999;
     border-radius: 15px;
-    overflow: visible;
+    overflow: hidden;
+}
+@keyframes heightAnim {
+    0% {
+        bottom: -300px;
+    }
+    100% {
+        bottom: 0;
+    }
+
 }
 .aqi-bar {
     position: absolute;
     bottom: 0;
     cursor: pointer;
+    animation: heightAnim .5s ease-in-out;
 }
 label {
     position: relative;
